appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/DeepLink.js
  - runScript:
      file: ../common/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/LaunchApp.yml
- runFlow: ../common/StopApp.yml
- runFlow: ../common/DeepLinkBeneficiaryUser.yml
- runFlow: ../common/GoToProfileFromTabBar.yml

- scrollUntilVisible:
    element:
      text: 'Version.*'
- tapOn: '.*Instagram.*'
- waitForAnimationToEnd

- runFlow: # Si 1ere ouverture de chrome
    when:
      visible: 'Accepter et continuer'
    commands:
      - tapOn: 'Accepter et continuer'
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'com.android.chrome:id/url_bar'
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'
      - scrollUntilVisible:
          element:
            text: '.*Instagram.*'

- tapOn: '.*X.*'
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'com.android.chrome:id/url_bar'
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'
      - scrollUntilVisible:
          element:
            text: '.*Instagram.*'

- tapOn: '.*Tiktok.*'
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'com.android.chrome:id/url_bar'
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'
      - scrollUntilVisible:
          element:
            text: '.*Instagram.*'

- runFlow: # Fallback si problème de retour
    when:
      visible: 'Bonjour Test-e2e.*'
    commands:
      - tapOn: 'Mon profil.*'
      - scrollUntilVisible:
          element:
            text: '.*Facebook.*'

- tapOn: '.*Facebook.*'
- waitForAnimationToEnd

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'

- scrollUntilVisible:
    element:
      text: 'Profil'
    direction: UP

- runFlow: ../common/StopApp.yml
